# ComfortRouting_Beta

./: .gitignore  .python-version  DEPLOYMENT.md  Dockerfile  GITHUB_SETUP.md  Procfile  README.md  app.js  build.sh  debug_pickle.py  deploy.md  deploy_check.py  index.html  minimal.css  nixpacks.toml  pyproject.toml  railway.json  render.yaml  requirements.txt  requirements_basic.txt  requirements_minimal.txt  requirements_simple.txt  setup.py  simple.css  styles.css  styles_backup.css  test.css  test.html  test_simple.css
api/: main.py  requirements.txt
data/: last_update_2026_1_27_13.txt  last_update_2026_1_27_14.txt  last_update_2026_1_27_15.txt  last_update_2026_1_27_16.txt  last_update_2026_1_27_17.txt  last_update_2026_1_27_18.txt  last_update_2026_1_27_19.txt  last_update_2026_1_27_20.txt  last_update_2026_1_27_21.txt  last_update_2026_1_27_22.txt  last_update_2026_1_27_23.txt  last_update_2026_1_28_0.txt  last_update_2026_1_28_1.txt  last_update_2026_1_28_10.txt  last_update_2026_1_28_11.txt  last_update_2026_1_28_12.txt  last_update_2026_1_28_13.txt  last_update_2026_1_28_14.txt  last_update_2026_1_28_15.txt  last_update_2026_1_28_16.txt  last_update_2026_1_28_17.txt  last_update_2026_1_28_18.txt  last_update_2026_1_28_19.txt  last_update_2026_1_28_2.txt  last_update_2026_1_28_20.txt  last_update_2026_1_28_21.txt  last_update_2026_1_28_22.txt  last_update_2026_1_28_23.txt  last_update_2026_1_28_4.txt  last_update_2026_1_28_5.txt  last_update_2026_1_28_6.txt  last_update_2026_1_28_7.txt  last_update_2026_1_28_8.txt  last_update_2026_1_28_9.txt  (+575 more)
(+4 files in other folders)
